--- a/src/components/AddStocks/Addstocks.scss
+++ b/src/components/AddStocks/Addstocks.scss
@@ -32,6 +32,67 @@
   background-image: linear-gradient(to top, #0250c5 0%, #d43f8d 100%);
   background-clip: text;
   -webkit-text-fill-color: transparent;
- padding: 2px;
- margin-bottom: 25px;
+  padding: 2px;
+  margin-bottom: 25px;
+}
+.StockButton {
+  background-color: hsl(228, 33%, 97%);
+  border: 2px solid #353b48;
+  transition: all 0.45s linear;
+
+  &:hover {
+    background-color: #353b48;
+    color: white;
+    border: 2px solid #fff;
+    transform: scale(1.1);
+    box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.4);
+  }
+}
+.sub-title {
+  background-image: linear-gradient(
+    to top,
+    #dbdcd7 0%,
+    #dddcd7 24%,
+    #e2c9cc 30%,
+    #e7627d 46%,
+    #b8235a 59%,
+    #801357 71%,
+    #3d1635 84%,
+    #1c1a27 100%
+  );
+  display: inline;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+.limit {
+  color: #c23616;
+}
+
+@media screen and(max-width:786px) {
+  .AddStocks {
+    width: 100vw;
+   justify-content:center;
+  }
+  .AddStocksTitle {
+    width: auto;
+    height: auto;
+    display: flex;
+  }
+  .StockButton {
+  width: 60px;
+  height: 35px;
+font-size: 3vw;
+}
+.title{
+  font-size: 5vw;
+ 
+}
+.sub-title {
+ font-size: 2vh;
+ overflow: hidden;
+}
+.limit{
+  font-size: 4.1vw;
+}
+
 }
