--- a/src/components/Modal/modal.css
+++ b/src/components/Modal/modal.css
@@ -8,6 +8,10 @@
   z-index: 100;
   text-align: center;
 }
+input::placeholder {
+  font-size: 1.3vw;
+}
+
 label {
   margin-left: 20px;
 }
@@ -20,6 +24,7 @@ form {
   align-items: space-between;
   margin-top: 20px;
 }
+
 .AddStockForm {
   background-color: whitesmoke;
   height: 500px;
@@ -47,12 +52,12 @@ form {
   transition: all 0.4s ease-in-out;
 }
 .AddButton:hover {
-  background-color: #fbc531;
+  background-color: rgba(247, 202, 24, 0.4);
   transform: scale(1.1);
-  opacity: 0.5;
   font-weight: 700;
   text-transform: capitalize;
   color: black;
+  border: 0.3px solid black;
 }
 .CLOSEBUTTON {
   width: 80px;
@@ -67,12 +72,12 @@ form {
 }
 
 .CLOSEBUTTON:hover {
-  background-color: #e84118;
+  background-color: rgba(255, 0, 0, 0.4);
   transform: scale(1.1);
-  opacity: 0.5;
   font-weight: 700;
   text-transform: capitalize;
   color: black;
+  border: 0.3px solid black;
 }
 
 .DEDCORATE {
